# klay-beam

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.klay-beam  Dockerfile.klay-beam-adt  Dockerfile.klay-beam-clap  Dockerfile.klay-beam-cuda  Dockerfile.klay-beam-demucs  Dockerfile.klay-beam-demucs-cuda  Dockerfile.klay-beam-discogs-effnet  Dockerfile.klay-beam-nac  Dockerfile.klay-beam-py310  Makefile  README.md  environment.yml  make-conda-lock-file.sh  pyproject.toml  tag-klay-beam-adt.sh  tag-klay-beam-clap.sh  tag-klay-beam-cuda.sh  tag-klay-beam-demucs-cuda.sh  tag-klay-beam-demucs.sh  tag-klay-beam-discogs-effnet.sh  tag-klay-beam-nac.sh  tag-klay-beam-py310.sh  tag-klay-beam.sh  tag.sh
cloudbuild/: job_byt5.yaml  job_demucs.yaml  job_essentia.yaml  job_klaynac.yaml  job_mds.yaml  job_mtrpp.yaml  job_stats.yaml  job_whisper.yaml
environment/: conda-linux-64.001-py310-cuda.yml  conda-linux-64.002-py310.yml  conda-linux-64.003-demucs.yml  conda-linux-64.004-demucs-cuda.yml  conda-linux-64.005-adt.dev.yml  conda-linux-64.005-adt.yml  conda-linux-64.006-nac.dev.yml  conda-linux-64.006-nac.yml  conda-linux-64.007-clap.dev.yml  (+14 more)
job_adt/: Dockerfile  Makefile  README.md  fetch-checkpoint.sh  pyproject.toml  tfp_python__init__.py
job_adt/environment/: dev.yml
job_adt/src/job_adt/: __init__.py  transforms.py  utils.py
job_adt/tests/: test_utils.py
job_clap/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
job_clap/environment/: dev.yml
job_clap/src/job_clap/: transforms.py
job_demucs/: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
job_demucs/environment/: dev.yml
job_demucs/src/job_demucs/: demucs.py  transforms.py
job_demucs/tests/: test_demucs.py
job_discogs_effnet/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
job_discogs_effnet/environment/: dev.yml
job_discogs_effnet/src/job_discogs_effnet/: transforms.py
job_encodec/: README.md  pyproject.toml
job_encodec/src/job_encodec/: transforms.py
job_jamendo_copy/: README.md  pyproject.toml
job_jamendo_copy/src/job_jamendo_copy/: audio.py  paths.py  transforms.py
job_jamendo_copy/tests/: test_audio.py  test_paths.py
job_nac/: Dockerfile.klay-beam-nac  README.md  pyproject.toml
job_nac/environment/: dev.yml  nac.dev.yml  nac.linux-64.yml  nac.mac.yml
job_nac/src/job_nac/: transforms.py
job_rms/: README.md  pyproject.toml
job_rms/environment/: dev.yml
job_rms/src/job_rms/: transforms.py
job_rms/tests/: test_transforms.py
job_stem_classifier/: Makefile  README.md  pyproject.toml
job_stem_classifier/assets/: stems_dict.json
job_stem_classifier/environment/: stem_classifier.dev.yml
job_stem_classifier/src/job_stem_classifier/: transforms.py
job_stem_classifier/tests/: test_transforms.py
jobs/job_byt5/: .env  Dockerfile  Makefile  README.md  pyproject.toml
jobs/job_byt5/environment/: dev.yml
jobs/job_byt5/src/job_byt5/: transforms.py
jobs/job_byt5/tests/: test_transforms.py
jobs/job_essentia/: .env  Dockerfile  Makefile  README.md  pyproject.toml
jobs/job_essentia/environment/: dev.yml
jobs/job_essentia/src/job_essentia/: __init__.py  transforms.py
jobs/job_essentia/src/job_essentia_features/: __init__.py  transforms.py
jobs/job_essentia/tests/: test_transforms.py
jobs/job_klaynac/: .env  Dockerfile  Makefile  README.md  README_standalone.md  convert_audio_standalone.py  pyproject.toml
jobs/job_klaynac/environment/: cuda.yml  dev.yml
jobs/job_klaynac/src/job_klaynac/: transforms.py
jobs/job_klaynac/tests/: test_transforms.py
jobs/job_mds/: .env  Dockerfile  Makefile  README.md  pyproject.toml
jobs/job_mds/environment/: dev.yml
jobs/job_mds/src/job_mds/: transforms.py
jobs/job_mds/src/job_shard/: transforms.py
jobs/job_mtrpp/: .env  Dockerfile  Makefile  README.md  pyproject.toml
jobs/job_mtrpp/environment/: cuda.yaml  dev.yml
jobs/job_mtrpp/model/: hparams.yaml
jobs/job_mtrpp/src/job_mtrpp/: transforms.py
jobs/job_stats/: .env  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
jobs/job_stats/src/job_stats/: genre_classes.py  transforms.py
jobs/job_stats/tests/: test_transforms.py
jobs/job_transcode/: .env  Makefile  README.md  pyproject.toml
jobs/job_transcode/environment/: dev.yml
jobs/job_transcode/src/job_transcode/: transforms.py
jobs/job_unified/: README.md  pyproject.toml
jobs/job_unified/environment/: cuda.yml  dev.yml
jobs/job_unified/src/job_unified/: __init__.py  audio_format.py  job_demucs.py  main.py  processor.py  utils.py
jobs/job_whisper/: .dockerignore  .env  Dockerfile  Makefile  README.md  pyproject.toml
jobs/job_whisper/environment/: cuda.yml  dev.yml
jobs/job_whisper/src/job_whisper/: transforms.py
klay_beam/: .dockerignore  CHANGELOG.md  Dockerfile.conda  Dockerfile.klay-beam-py310  LICENSE  Makefile  README.md  docker-build.sh  docker-env-helper.sh  get_version.sh  make-conda-lock-file.sh  pyproject.toml  setup.py
klay_beam/environment/: README.md  osx-64-klay-beam-py310.yml  py3.10-torch-cuda.yml  py3.10-torch.yml  py3.10-torch1.11-cuda11.3.yml  py3.10-torch1.11.yml  py3.10-torch2.0.yml  py3.10-torch2.1-cuda12.1.yaml  py3.10-torch2.1-cuda12.1.yml  py3.10-torch2.1-klay_data3.0.yml  py3.10-torch2.1.yml  py3.10-torch2.3-cuda12.1.yaml  py3.10-torch2.5-cuda12.1.yaml  py3.10-torch2.5-cuda12.1.yml  py3.10-torch2.5.yml  py3.10.yml  py3.11-torch2.0.yml  py3.11.yml  py3.9-torch1.12-cuda11.6.yml  py3.9-torch2.0-cuda11.8.yml  py3.9-torch2.0-torchvision0.15.yml  py3.9-torch2.0.yml  py3.9.yml  py310-torch.linux-64.yml  py310-torch.local.yml  py310.linux-64.yml  py310.local.yml
klay_beam/src/klay_beam/: encodec_transforms.py  path.py  run_cuda_test.py  run_example.py  torch_transforms.py  torch_utils.py  transforms.py  types.py  utils.py
klay_beam/src/klay_beam/extractors/: spectral.py
klay_beam/tests/: test_audio.py  test_audio_file_io.py  test_audio_loaders.py  test_multi_match_files.py  test_path.py  test_transforms.py  utils.py
klay_beam/tests/extractors/: test_spectral.py
klay_beam/tests/test_data/music/: 01.opus
(+58 files in other folders)
