[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job_adt"
description = "Job for extracting MIDI data from drums stems using ADT"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "apache-beam[gcp]==2.46.0",
  "magenta~=2.1",
  # Myseriously, tensor2tensor is not automatically installed in the docker
  # build workflow, so we add it explicitly here.
  "tensor2tensor",
  # Pinning numba as advised by a deprecation warning.
  "numba==0.48.0",

]
requires-python = "<3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]

[tool.setuptools.dynamic]
version = {attr = "job_adt.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
  "magenta.*",
]
ignore_missing_imports = true
