[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job_nac"
description = "Beam job for extracting neural audio codec (NAC) tokens"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "numpy",
  "klay_beam>=0.6",
  "torch",
  "torchaudio",
  "encodec",
  "descript-audio-codec@git+https://github.com/klay-music/descript-audio-codec.git",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]

[tool.setuptools.dynamic]
version = {attr = "job_nac.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
]
ignore_missing_imports = true
