[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job_stem_classifier"
description = "Beam job for classifying stem names of audio files by their file name"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  # Job packages can and should pin a beam version. This is because beam
  # must also be pinned in the Docker image. An ugrade to the beam version
  # should necessitate an upgrade to the job package and the recommended
  # Docker image.
  "apache_beam[gcp]~=2.51",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]

[tool.setuptools.dynamic]
version = {attr = "job_stem_classifier.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_stem_classifier = ["py.typed"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
]
ignore_missing_imports = true
