[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "klay_beam"
description = ""
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "apache-beam[gcp]==2.49.0",
  "pydub==0.25.1",
  "soundfile>=0.12.1",
  "torchaudio",
  # Feature extraction deps from semantic-model@f388e4:
  "librosa>=0.9",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]

[tool.setuptools.dynamic]
version = {attr = "klay_beam.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
  "torchaudio",
  "pydub",
  "soundfile"
]
ignore_missing_imports = true
