[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "klay_beam"
description = ""
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "apache-beam[gcp]",
  "pydub==0.25.1",
  "soundfile>=0.12.1",
  # Feature extraction deps from semantic-model@f388e4:
  "librosa>=0.9",
]
requires-python = ">=3.8"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]
# Pytorch loading of in-memory (file-like) audio  is supported at least since
# 0.8.0: https://pytorch.org/audio/0.8.0/backend.html#load
pytorch = ["torchaudio>=0.8.0", "torch>=1.0.0"]

[tool.setuptools.dynamic]
version = {attr = "klay_beam.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
  "torchaudio",
  "pydub",
  "soundfile"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Running pytest results in many warnings which are associated with google-cloud
# apis. These warnings are not relevant to the code we are testing, filter then
# from the output. See:
# https://github.com/googleapis/google-cloud-python/issues/11184#issuecomment-1640884088
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]