[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job_essentia"
description = "Job for extracting DiscogsEffnet embeddings using essentia"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "essentia-tensorflow",
  # Job packages should pin versions for both:
  # - apache-beam
  # - klay-beam
  #
  # Both klay_beam and apache_beam are pre-installed in the docker container.
  # Mismatched or incompatible versions between the launch and dockerized
  # Dataflow runtime environments are likely to break the job or cause bugs that
  # are subtle and difficult-to-detect.
  #
  # If you need to update either dependency, you should also update the default
  # default docker image which is likely to specified in the the jobs launch
  # script (bin/run_job_<name>.py).
  "apache-beam[gcp]==2.53.0",
  "klay-beam~=0.13",
]
requires-python = "<3.10"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]

[tool.setuptools.dynamic]
version = {attr = "job_essentia.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
  "essentia.*",
]
ignore_missing_imports = true
