[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job_klaynac"
description = "Beam job for extracting KlayNAC or KlayNACVAE tokens"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "av",
  "numpy<2",
  "apache_beam[gcp]==2.61",
  "klay_beam[pytorch]==0.14.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10", "types-tqdm"]

[tool.setuptools.dynamic]
version = {attr = "job_klaynac.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
  "audiotools.*",
  "dac.*",
  "scipy.*",
  "soundfile.*",
  "transformers.*",
  "torchaudio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Running pytest results in many warnings which are associated with google-cloud
# apis. These warnings are not relevant to the code we are testing, filter then
# from the output. See:
# https://github.com/googleapis/google-cloud-python/issues/11184#issuecomment-1640884088
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
    "ignore::DeprecationWarning:torch.utils.tensorboard",
]
