[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job_mtrpp"
description = "Beam job for extracting MTRPP embeddings"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "av",
  "huggingface_hub",
  "numpy",
  "apache_beam[gcp]==2.53",
  "klay_beam[pytorch]==0.13.7",
]
requires-python = ">=3.10"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy>=0.990", "pydantic>=1.10"]

[tool.setuptools.dynamic]
version = {attr = "job_mtrpp.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
klay_data = [
  "data/*.npy",
  "data/*.json",
]

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "apache_beam.*",
]
ignore_missing_imports = true
